@@ -66,13 +66,13 @@ class BannersViewBanner extends JView
 			JToolBarHelper::save('banner.save', 'JTOOLBAR_SAVE');
 
 			if ($canDo->get('core.create')) {
-				JToolBarHelper::custom('banner.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
+				JToolBarHelper::save2new('banner.save2new', 'JTOOLBAR_SAVE_AND_NEW');
 			}
 		}
 
 		// If an existing item, can save to a copy.
 		if (!$isNew && $canDo->get('core.create')) {
-			JToolBarHelper::custom('banner.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
+			JToolBarHelper::save2copy('banner.save2copy', 'JTOOLBAR_SAVE_AS_COPY');
 		}
 
 		if (empty($this->item->id))  {
