@@ -66,11 +66,11 @@ class BannersViewClient extends JView
 		}
 		if (!$checkedOut && $canDo->get('core.create')) {
 
-			JToolBarHelper::custom('client.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
+			JToolBarHelper::save2new('client.save2new', 'JTOOLBAR_SAVE_AND_NEW');
 		}
 		// If an existing item, can save to a copy.
 		if (!$isNew && $canDo->get('core.create')) {
-			JToolBarHelper::custom('client.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
+			JToolBarHelper::save2copy('client.save2copy', 'JTOOLBAR_SAVE_AS_COPY');
 		}
 
 		if (empty($this->item->id))  {
