@@ -75,12 +75,12 @@ class MenusViewItem extends JView
 
 		// If the user can create new items, allow them to see Save & New
 		if ($canDo->get('core.create')) {
-			JToolBarHelper::custom('item.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
+			JToolBarHelper::save2new('item.save2new', 'JTOOLBAR_SAVE_AND_NEW');
 		}
 
 		// If an existing item, can save to a copy only if we have create rights.
 		if (!$isNew && $canDo->get('core.create')) {
-			JToolBarHelper::custom('item.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
+			JToolBarHelper::save2copy('item.save2copy', 'JTOOLBAR_SAVE_AS_COPY');
 		}
 
 		if (empty($this->item->id))  {
