@@ -68,11 +68,11 @@ class ModulesViewModule extends JView
 			JToolBarHelper::save('module.save', 'JTOOLBAR_SAVE');
 		}
 		if (!$checkedOut && $canDo->get('core.create')) {
-			JToolBarHelper::custom('module.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
+			JToolBarHelper::save2new('module.save2new', 'JTOOLBAR_SAVE_AND_NEW');
 		}
 			// If an existing item, can save to a copy.
 		if (!$isNew && $canDo->get('core.create')) {
-			JToolBarHelper::custom('module.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
+			JToolBarHelper::save2copy('module.save2copy', 'JTOOLBAR_SAVE_AS_COPY');
 		}
 		if (empty($this->item->id))  {
 			JToolBarHelper::cancel('module.cancel', 'JTOOLBAR_CANCEL');
