@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 16-Jun-2011 Christophe Demko
  + [#26073] Make single contact view ready to use dynamic forms
+ + [#26120] [patch] JToolBar cleanup for Save and Create New and Save as Copy
 
 14-Jun-2011 Christophe Demko
  # [#26070] The com_categories component is looking in the 3rd party component directory for a category.xml file
